--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,6 +22,10 @@ $font-family-sans-serif: -apple-system, sans-serif !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+.spinnerText {
+    margin: 0px;
+}
+
 #page2 {
   .scroll-content {
     //display: table !important;
