--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -19,7 +19,7 @@
         <p><b>Search</b>: Easily search for any YouTube channel. For very small channels, you may have to enter their URLs or channel IDs instead of their names.</p>
         <p><b>Favorites</b>: Save your favorite channels so that you don't have to search for them every time you open the app.</p>
         <p><b>Notifications</b>: Receive push notifications when your favorite YouTuber approaches or reaches a milestone.</p>
-        <p><b>Widget (NEW!)</b>: Check any YouTuber's subscriber count directly from your home screen.</p>
+        <p><b>Widget (NEW!)</b>: Check any YouTuber's subscriber count directly from your home screen. The widget updates every 30 minutes or when you tap the Refresh button.</p>
         <br>
         <h2 ng-style="settings.nightMode && { 'color': '#fff' }">How to get promoted on the app</h2>
         <p>There are three main ways to get promoted on the app:</p>
