--- a/www/config/templates/config.html
+++ b/www/config/templates/config.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Search">
+<ion-view view-title="Widget configuration">
     <ion-nav-bar class="bar-positive">
     </ion-nav-bar>
     <ion-content class="padding">
