--- a/native/android/res/xml/widget_info.xml
+++ b/native/android/res/xml/widget_info.xml
@@ -5,6 +5,7 @@
     android:minHeight="40dp"
     android:minWidth="250dp"
     android:updatePeriodMillis="1800000"
+    android:previewImage="@drawable/widget_preview"
     android:widgetCategory="home_screen|keyguard"
     android:configure="net.livecounts.SubCountWidgetConfigure" >
 
