--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -24,6 +24,24 @@
             <br>
             <ion-item class="item-divider" ng-class="{ 'item-divider-dark': settings.nightMode }">Notifications</ion-item>
             <ion-toggle ng-class="{ 'item-dark': settings.nightMode }" id="settings-toggle7" ng-model="settings.notifIcons" ng-change="saveSettings()">Show icons for notifications</ion-toggle>
+            <br>
+            <ion-item class="item-divider" ng-class="{ 'item-divider-dark': settings.nightMode }">Widget</ion-item>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Update interval
+                </div>
+                <select ng-model="settings.widgetUpdateFreq" ng-change="saveSettings()">
+                    <option value="5">5 seconds</option>
+                    <option value="15">15 seconds</option>
+                    <option value="30">30 seconds</option>
+                    <option value="60" selected>1 minute</option>
+                    <option value="300">5 minutes</option>
+                    <option value="900">15 minutes</option>
+                    <option value="1800">30 minutes</option>
+                </select>
+            </label>
         </ion-list>
+        <br>
+        <br>
     </ion-content>
 </ion-view>
