Add link to privacy policy

--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -27,6 +27,9 @@
         <p><b>Auction</b> - Around 12 of the remaining days of that month are auctioned off. For more information, check <a href="#" ng-click="openAuctionPage()">livecounts.net/auction</a>.</p>
         <p><b>Mini-contests</b> - Every month, mini-contests are hosted on Twitter. For information and updates, please follow <a href="#" ng-click="openLCTwitter()">@LivecountsSite</a>.</p>
         <br>
+        <h2 ng-style="settings.nightMode && { 'color': '#fff' }">Privacy Policy</h2>
+        <p>The Livecounts Privacy Policy is located at <a href="#" ng-click="openPrivacyPolicy()">livecounts.net/privacy</a>.</p>
+        <br>
         <h2 ng-style="settings.nightMode && { 'color': '#fff' }">Contact me</h2>
         <div>Twitter (much preferred): <a href="#" ng-click="openLCTwitter()">@LivecountsSite</a></div>
         <div>Email: <a href="#" ng-click="emailToLC()">livecountssite@gmail.com</a></div>
