--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -24,7 +24,7 @@
             <br>
             <ion-item class="item-divider" ng-class="{ 'item-divider-dark': settings.nightMode }">Notifications</ion-item>
             <ion-toggle ng-class="{ 'item-dark': settings.nightMode }" id="settings-toggle7" ng-model="settings.notifIcons" ng-change="saveSettings()">Show icons for notifications</ion-toggle>
-            <br>
+            <!--br>
             <ion-item class="item-divider" ng-class="{ 'item-divider-dark': settings.nightMode }">Widget</ion-item>
             <label class="item item-input item-select">
                 <div class="input-label">
@@ -39,7 +39,7 @@
                     <option value="900">15 minutes</option>
                     <option value="1800">30 minutes</option>
                 </select>
-            </label>
+            </label-->
         </ion-list>
         <br>
         <br>
